feat: group modulunu ekle, blog hub facet mimarisini sadelestir
Group/GroupAssignment ile yapima ozgu genel taksonomi (Faction/Species)
Character'a atanabilir hale geldi; SecurityConfig'e /api/tags ve
/api/groups path kurallari eklendi.

Blog hub facet tarafinda Format artik TagType'tan cikip Blog'un kendi
alanina (BlogFormat enum) tasindi, boylece status=PUBLISHED filtresi
dogrudan uygulanabiliyor; Theme facet'i kaldirildi (serbest tag'ler
onun yerini aldi), BlogTag.category alani da bu sadelestirmeyle
gereksiz kaldigi icin silindi.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>